# uv-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
